# SunWorld-v2

./: .gitignore  CMakeLists.txt  README.md
assets/: void.ani
src/: main.cpp
src/engine/: allocator.h  assets.cpp  assets.h  render.cpp  render.h  timer.cpp  timer.h
src/gameplay/: screens.cpp  screens.h  sunworld.cpp  sunworld.h
src/gameplay/world/: tiles.cpp  tiles.h
src/io/: debug.cpp  debug.h
